Fixing trailrider image bug

--- a/styles.css
+++ b/styles.css
@@ -633,7 +633,7 @@ ul.custom-list{
   height: 800px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('images/trailrider1.jpg') center 30% no-repeat;
+  background: url('images/trailrider1.JPG') center 30% no-repeat;
   background-size: cover;
   }
 .projects-trailrider-title {
