--- a/styles.css
+++ b/styles.css
@@ -901,11 +901,11 @@ ul.custom-bulleted-list{
 }
 .custom-industry-height{
   padding-top: 50px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 .custom-volunteer-height{
   padding-top: 0px;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
 }
 .custom-research-height{
   padding-top: 0px;
@@ -935,6 +935,16 @@ ul.custom-bulleted-list{
   font-size:8px;
   font-weight:400;
   line-height:24px;
+  letter-spacing:.04em;
+  text-align: right;
+  padding-right: 10px;
+}
+.custom-typography--end
+{
+  font-family:"Roboto","Helvetica","Arial",sans-serif;
+  font-size:8px;
+  font-weight:400;
+  line-height:10px;
   letter-spacing:.04em;
   text-align: right;
   padding-right: 10px;
